# thorvg

./: flutter_build.android.sh  flutter_build.ios.sh  meson.build  meson_options.txt  wasm_build.sh
cross/: flutter_ios_aarch64.txt  flutter_ios_simulator_aarch64.txt  wasm32_wg.txt  wasm_webgpu.txt  wasm_x86_i686.txt
examples/: LottieExtension.cpp
inc/: meson.build  thorvg.h  webgpu.h
src/bindings/: meson.build
src/bindings/flutter/: meson.build  tvgFlutterLottieAnimation.cpp  tvgFlutterLottieAnimation.h
src/bindings/wasm/: meson.build  tvgWasmLottieAnimation.cpp  tvgWgWasmLottieAnimation.cpp
src/examples/: Lottie.cpp
src/loaders/lottie/: tvgLottieBuilder.cpp  tvgLottieModel.cpp  tvgLottieModel.h  tvgLottieParser.cpp  tvgLottieParser.h  tvgLottieProperty.h
src/renderer/: tvgWgCanvas.cpp
src/renderer/wg_engine/: meson.build  tvgWgCommon.cpp  tvgWgCommon.h  tvgWgRenderer.cpp  tvgWgRenderer.h
web/: README.md  package.json  rollup.config.js  tsconfig.json
web/example/: benchmark.html  index.mjs
web/src/: lottie-player.model.ts  lottie-player.ts  version.ts  worker.js
